[add] adds text wrap to About page and corrects font styling on Download page

--- a/wq-app-gatsby/src/styles/about.module.css
+++ b/wq-app-gatsby/src/styles/about.module.css
@@ -1,6 +1,11 @@
 .paragraph {
   font-family: 'Cabin', sans-serif;
   font-size: 18px;
+  padding-bottom: 8px
+  /* I added a little padding so that the text wasn't at the very bottom of the screen
+  we can change this into just the ending paragraph of each page if you would like.
+  */
+
 }
 
 .header{
@@ -11,4 +16,12 @@
 .text-wrap {
   float: left;
   margin: 10px;
+}
+
+.list-Style > li {
+  list-style: disc;
+  font-size: 18px;
+  padding-top: 5px;
+  padding-bottom: 15px;
+  margin-left: 29%;
 }
